--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
   "devDependencies": {
     "gh-pages": "^6.1.1"
   },
-  "homepage": "https://Ankit19Bharati/Todo-List"
+  "homepage": "https://Ankit19Bharati.github.io/Todo-List"
 }
