--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
   "devDependencies": {
     "gh-pages": "^6.1.1"
   },
-  "homepage": "https://ankit19bharati.github.io/"
+  "homepage": "https://ankit19bharati.github.io/Todo-List"
 }
