added host files

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
+  "homepage": "https://ankit19bharati.github.io/Todo-List/",
   "name": "todos-list",
   "version": "0.1.0",
-  "private": true,
-  "homepage": "https://ankit19bharati.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
